--- a/src/styles/pivot.css
+++ b/src/styles/pivot.css
@@ -9,7 +9,7 @@ body {
 	text-align: center;
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 0.85em;
-	line-height: 1.2em;
+	line-height: 1.3em;
 	color: #252525;
 }
 
@@ -27,8 +27,17 @@ a img {
 
 h2 {
 	margin-bottom: 5px;
-	font-size: 110%;
+	font-size: 120%;
 	color: #b40000;
+}
+
+h3 {
+	margin-bottom: 5px;
+	font-size: 110%;
+}
+
+ul, ol {
+	margin: 5px 0 5px 20px;
 }
 
 /* Page structure */
@@ -93,6 +102,7 @@ h2 {
 }
 
 .navi {
+	margin: 0;
 	position: absolute;
 	top: 90px;
 	left: 160px;
@@ -129,7 +139,7 @@ h2 {
 }
 
 .stageBtn {
-	margin-top: 26px;
+	margin: 26px 0 0 0;
 	list-style: none;
 }
 
@@ -205,6 +215,7 @@ h2 {
 }
 
 #featured .homeCol2 ul {
+	margin: 0;
 	list-style: none;
 	background: url(dotted_line_b.gif) repeat-x left top;
 }
@@ -225,6 +236,7 @@ h2 {
 }
 
 .newsItems {
+	margin: 0;
 	list-style: none;
 	border-top: 1px solid #c2c2c2;
 }
@@ -292,6 +304,7 @@ h2 {
 
 /* Left navigation */
 .naviLeft {
+	margin: 0;
 	padding-top: 5px;
 	float: left;
 	list-style: none;
@@ -312,7 +325,7 @@ h2 {
 /* Content elements */
 #contentBase h1 {
 	padding: 0 0 10px 160px;
-	font-size: 180%;
+	font-size: 170%;
 	font-weight: normal;
 	background: url(dotted_line_b.gif) repeat-x left bottom;
 	color: #464646;
@@ -322,6 +335,10 @@ h2 {
 	padding-top: 10px;
 	width: 765px;
 	float: right;
+}
+
+.content p {
+	margin-bottom: 5px;
 }
 
 /* Featured demos */
@@ -394,6 +411,7 @@ h2 {
 	background: url(logo_footer.png) no-repeat 40px 10px;
 	float: left;
 	border-right: 1px solid #102b40;
+	line-height: 1.1em;
 }
 
 .footerLinks {
@@ -403,6 +421,7 @@ h2 {
 }
 
 .footerLinks ul {
+	margin: 0;
 	list-style: none;
 }
 
