--- a/www/styles/pivot.css
+++ b/www/styles/pivot.css
@@ -213,22 +213,29 @@ h3 {
 #featured .homeCol2 ul {
 	margin: 0px;
 	list-style: none;
-	background: url(dotted_line_b.gif) repeat-x left top;
+	font-size:13px;
+	background-color: #f5f5f5;
 }
 
 #featured .homeCol2 ul li {
-	background: url(dotted_line_b.gif) repeat-x left bottom;
+    border-top: dotted 1px black;
+    padding-top:5px;
+    padding-bottom:10px;
 }
 
 #featured .homeCol2 ul li a {
 	padding: 5px 23px;
 	display: block;
-	background: url(pivot_icon_s_light_blue.png) no-repeat 5px center;
 	text-decoration: none;
 }
 
 #featured .homeCol2 ul li a:hover {
 	color: #0d4a7a;
+}
+
+cite.homeCol2 {
+    font-size: 12px;
+    font-style: italic;
 }
 
 .newsItems {
@@ -245,7 +252,6 @@ h3 {
 	padding: 5px;
 	display: block;
 	text-decoration: none;
-	background-color: #f5f5f5;
 	border-top: 1px solid #fff;
 }
 
