PIVOT-750, add ASF logo transparent, and update css to handle it

--- a/www/styles/pivot.css
+++ b/www/styles/pivot.css
@@ -88,6 +88,13 @@ h3 {
 	z-index: 499;
 }
 
+.logoASF {
+	position: absolute;
+	right: 10px;
+	top: 10px;
+	z-index: 499;
+}
+
 .logo img {
 	width: 140px;
 }
